# cnc-ra-libs

./: README.md
audio/: sound.cpp  sound.h
bink2/: bink2_audio.cpp  bink2_audio.h  bink2_background_player.cpp  bink2_background_player.h  bink2_bitstream.cpp  bink2_bitstream.h  bink2_decoder.cpp  bink2_decoder.h  bink2_simd_avx2.cpp  bink2_simd_avx2.h  bink2_video.cpp  bink2_video.h
compat/: compat.cpp
crypto/: CMakeLists.txt  compat_shim.h  io.h  mixread.cpp  mixread.h  new.h
graphics/: compress.cpp  fading.cpp  shp.cpp  wsa.cpp
math/: math.cpp
render/: AGENTS.md  CMakeLists.txt  PLAN.md  bui_reader.cpp  bui_reader.h  dds_reader.cpp  dds_reader.h  hd_sprite_provider.cpp  hd_sprite_provider.h  hd_terrain_provider.cpp  hd_terrain_provider.h  legacy_sprite_provider.cpp  legacy_sprite_provider.h  meg_reader.cpp  meg_reader.h  meta_parser.cpp  meta_parser.h  miniz.h  mtd_reader.cpp  mtd_reader.h  render_compositor.cpp  render_compositor.h  render_layer.h  sprite_provider.h  texture_atlas.cpp  texture_atlas.h  zip_reader.cpp  zip_reader.h
render/gl/: gl_house_color.cpp  gl_house_color.h  gl_renderer.cpp  gl_renderer.h  gl_sprite_batch.cpp  gl_sprite_batch.h
render/tests/: .env.example  .gitignore  CMakeLists.txt  run_tests.sh  test_bui_reader.cpp  test_framework.h  test_gl_house_color.cpp  test_gl_renderer.cpp  test_gl_sprite_batch.cpp  test_hd_sprite_provider.cpp  test_hd_terrain_provider.cpp  test_meg_reader.cpp  test_meta_parser.cpp  test_render_layer.cpp  test_sprite_provider.cpp  test_texture_atlas.cpp  test_zip_reader.cpp
vqa/: aud_decode.cpp  aud_decode.h  vqa_decoder.cpp  vqa_decoder.h
